--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "peramesoftwareweb",
   "version": "0.1.0",
-  "homepage":"http://www.peramegames.com/profile/",
+  "homepage": "http://www.peramegames.com/profile/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "alertifyjs": "^1.13.1",
     "react": "^17.0.1",
     "react-circular-input": "^0.2.2",
     "react-dom": "^17.0.1",
