--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "peramesoftwareweb",
   "version": "0.1.0",
-  "homepage": "http://www.peramegames.com/profile/",
+  "homepage": "http://www.gbsfdeveloper.com/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.8",
@@ -11,12 +11,12 @@
     "react": "^17.0.1",
     "react-circular-input": "^0.2.2",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
