web page's title name }changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peramesoftwareweb",
+  "name": "gbsfDeveloper",
   "version": "0.1.0",
   "homepage": "http://www.gbsfdeveloper.com/",
   "private": true,
